add container, jumbotron, blockquote

--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
     <title>Vacation Site</title>
   </head>
   <div class="container">
+    <div class="jumbotron">
   <body>
-    <p>San Juan, Puerto Rico is a great place to vacation at.</p>
-
+    <h1>Mexico</h1>
+  <p>"This site is sooo AWESOME!"</p>
   </body>
-</div>
+    </div>
+  <blockquote>
+    <p>"The water is soooo FRESH!"</p>
+    <footer>Some dude on the beach</footer>
+  </blockquote>
+  </div>
 </html>
