--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <div class="container">
     <div class="jumbotron">
   <body>
-    <h1>Mexico</h1>
+    <h1 class="bg-success">Mexico</h1>
   <p>"This site is sooo AWESOME!"</p>
   </body>
     </div>
   <blockquote>
-    <p>"The water is soooo FRESH!"</p>
-    <footer>Some dude on the beach</footer>
+    <p class="bg-info">"The water is soooo FRESH!"</p>
+    <footer class="text-danger">Some dude on the beach</footer>
   </blockquote>
   </div>
 </html>
